syntax = "proto3";

package trainerpb;

import "google/protobuf/timestamp.proto";

option csharp_namespace = "TrainerApi";

service TrainerService {
    rpc GetTrainerById (TrainerByIdRequest) returns (TrainerResponse); //unary call
}

message TrainerByIdRequest {
    string id = 1;
}

message TrainerResponse {
    string id = 1;
    string name = 2;
    int32 age = 3;
    google.protobuf.Timestamp birthday = 4;
    google.protobuf.Timestamp created_at = 5;
    repeated Medal medals = 6;
}

message Medal{
    string region = 1;
    MedalType type = 2;
}

enum MedalType {
    UNKNOWN = 0;
    GOLD = 1;
    SILVER = 2;
    BRONZE = 3;
}